# AvroDantic

./: .pre-commit-config.yaml  README.md  pyproject.toml
.registry/: test_1.json
src/avrodantic/adapters/: __init__.py
src/avrodantic/adapters/pydantic_generator/: __init__.py  pydantic_model_generator.py
src/avrodantic/adapters/schema_resigtry/: __init__.py  local_registry.py
src/avrodantic/adapters/serializers/: avro_serializer.py
src/avrodantic/core/entities/: __init__.py  avro_schema.py  pydantic_model.py
src/avrodantic/core/exceptions/: __init__.py
src/avrodantic/core/use_cases/: __init__.py  validate_and_serialiez.py
src/avrodantic/exceptions/: __init__.py
tests/adapters/: test_local_registry.py  test_pydantic_model_generator.py
tests/use_cases/: test_validate_and_serialize.py
